--- a/package.json
+++ b/package.json
@@ -2,6 +2,9 @@
   "name": "copyright-header",
   "version": "0.0.1",
   "description": "Add and update copyright headers automatically",
+  "bin": {
+    "copyright-header": "build/main/cli.js"
+  },
   "main": "build/main/index.js",
   "typings": "build/main/index.d.ts",
   "module": "build/module/index.js",
@@ -32,7 +35,8 @@
     "reset": "git clean -dfx && git reset --hard && npm i",
     "clean": "trash build test",
     "all": "run-s reset test cov:check doc:html",
-    "prepare-release": "run-s all version doc:publish"
+    "prepare-release": "run-s all version doc:publish",
+    "start": "node build/main/cli.js"
   },
   "scripts-info": {
     "info": "Display information about the package scripts",
