--- a/package.json
+++ b/package.json
@@ -55,9 +55,7 @@
   "engines": {
     "node": ">=8.9"
   },
-  "dependencies": {
-    "sha.js": "^2.4.11"
-  },
+  "dependencies": {},
   "devDependencies": {
     "ava": "^1.0.0-beta.5.1",
     "codecov": "^3.0.2",
