--- a/package.json
+++ b/package.json
@@ -8,6 +8,9 @@
   "main": "build/main/index.js",
   "typings": "build/main/index.d.ts",
   "module": "build/module/index.js",
+  "files": [
+    "build"
+  ],
   "repository": "https://github.com/shybyte/copyright-header",
   "license": "MIT",
   "keywords": [],
