--- a/package.json
+++ b/package.json
@@ -63,6 +63,7 @@
     "commander": "^2.16.0"
   },
   "devDependencies": {
+    "@types/sinon": "^5.0.1",
     "ava": "^1.0.0-beta.5.1",
     "codecov": "^3.0.2",
     "cz-conventional-changelog": "^2.1.0",
@@ -71,6 +72,7 @@
     "nyc": "^12.0.2",
     "opn-cli": "^3.1.0",
     "prettier": "^1.14.0",
+    "sinon": "^6.1.4",
     "standard-version": "^4.4.0",
     "trash-cli": "^1.4.0",
     "tslint": "^5.10.0",
