--- a/package.json
+++ b/package.json
@@ -37,7 +37,7 @@
     "version": "standard-version",
     "reset": "git clean -dfx && git reset --hard && npm i",
     "clean": "trash build test",
-    "all": "run-s reset test cov:check doc:html",
+    "all": "run-s reset test cov:check",
     "prepare-release": "run-s all version",
     "startOnTestData": "node build/main/cli.js --include \"test-data\" --copyrightHolder \"CopyrightHolder\"",
     "startOnSrc": "node build/main/cli.js --copyrightHolder \"Marco Stahl\" --include src --exclude \"src/cli.ts\"",
@@ -54,7 +54,7 @@
     "doc:json": "Generate API documentation in typedoc JSON format",
     "version": "Bump package.json version, update CHANGELOG.md, tag release",
     "reset": "Delete all untracked files and reset the repo to the last commit",
-    "prepare-release": "One-step: clean, build, test, publish docs, and prep a release"
+    "prepare-release": "One-step: clean, build, test, and prep a release"
   },
   "engines": {
     "node": ">=8.9"
