--- a/package.json
+++ b/package.json
@@ -3,10 +3,10 @@
   "version": "0.1.0",
   "description": "Add and update copyright headers automatically",
   "bin": {
-    "copyright-header": "build/main/cli.js"
+    "copyright-header": "build/main/src/cli.js"
   },
-  "main": "build/main/index.js",
-  "typings": "build/main/index.d.ts",
+  "main": "build/main/src/index.js",
+  "typings": "build/main/src/index.d.ts",
   "module": "build/module/index.js",
   "files": [
     "build"
