--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,8 +2,9 @@
   "compilerOptions": {
     "target": "es2017",
     "outDir": "build/main",
-    "rootDir": "src",
+    // "rootDir": "src",
     "moduleResolution": "node",
+    "resolveJsonModule": true,
     "module": "commonjs",
     "declaration": true,
     "inlineSourceMap": true,
