--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "copyright-header",
   "version": "0.2.0",
-  "description": "Add and update copyright headers automatically",
+  "description": "Validate, add and update copyright headers automatically, based on the git history.",
   "bin": {
     "copyright-header": "build/main/src/cli.js"
   },
