--- a/package.json
+++ b/package.json
@@ -3,10 +3,10 @@
   "version": "0.4.1",
   "description": "Validate, add and update copyright headers automatically, based on the git history.",
   "bin": {
-    "copyright-header": "build/main/src/cli.js"
+    "copyright-header": "build/main/cli.js"
   },
-  "main": "build/main/src/index.js",
-  "typings": "build/main/src/index.d.ts",
+  "main": "build/main/index.js",
+  "typings": "build/main/index.d.ts",
   "module": "build/module/index.js",
   "files": [
     "build"
@@ -22,11 +22,11 @@
     "fix": "run-s fix:*",
     "fix:prettier": "prettier \"src/**/*.ts\" --write",
     "fix:tslint": "tslint --fix --project .",
-    "fix:copyright": "node build/main/src/cli.js --fix --copyrightHolder \"Marco Stahl\" --include src --exclude \"src/cli.ts\"",
+    "fix:copyright": "node build/main/cli.js --fix --copyrightHolder \"Marco Stahl\" --include src --exclude \"src/cli.ts\"",
     "test": "run-s build test:*",
     "test:lint": "tslint --project . && prettier \"src/**/*.ts\" --list-different",
     "test:unit": "nyc --silent ava",
-    "test:copyright": "node build/main/src/cli.js --copyrightHolder \"Marco Stahl\" --include src --exclude \"src/cli.ts\"",
+    "test:copyright": "node build/main/cli.js --copyrightHolder \"Marco Stahl\" --include src --exclude \"src/cli.ts\"",
     "watch": "run-s clean build:main && run-p \"build:main -- -w\" \"test:unit -- --watch\"",
     "cov": "run-s build test:unit cov:html && opn coverage/index.html",
     "cov:html": "nyc report --reporter=html",
@@ -41,7 +41,7 @@
     "clean": "trash build test",
     "all": "run-s reset test cov:check",
     "prepare-release": "run-s all version",
-    "startOnTestData": "node build/main/src/cli.js --include \"test-data\" --copyrightHolder \"CopyrightHolder\"",
+    "startOnTestData": "node build/main/cli.js --include \"test-data\" --copyrightHolder \"CopyrightHolder\"",
     "revertTestData": "git checkout HEAD -- test-data"
   },
   "scripts-info": {
