--- a/package.json
+++ b/package.json
@@ -64,13 +64,14 @@
     "commander": "^2.16.0"
   },
   "devDependencies": {
+    "@types/node": "^12.7.2",
     "@types/sinon": "^5.0.1",
-    "ava": "^1.0.0-beta.5.1",
+    "ava": "^2.3.0",
     "codecov": "^3.0.2",
     "cz-conventional-changelog": "^2.1.0",
     "gh-pages": "^1.2.0",
     "npm-run-all": "^4.1.3",
-    "nyc": "^12.0.2",
+    "nyc": "^14.1.1",
     "opn-cli": "^3.1.0",
     "prettier": "^1.14.0",
     "sinon": "^6.1.4",
@@ -79,8 +80,8 @@
     "tslint": "^5.10.0",
     "tslint-config-prettier": "^1.13.0",
     "tslint-immutable": "^4.5.4",
-    "typedoc": "^0.11.1",
-    "typescript": "^3.0.1"
+    "typedoc": "^0.15.0",
+    "typescript": "^3.6.2"
   },
   "ava": {
     "failFast": true,
