Added copyright header to cli.ts

--- a/package.json
+++ b/package.json
@@ -22,11 +22,11 @@
     "fix": "run-s fix:*",
     "fix:prettier": "prettier \"src/**/*.ts\" --write",
     "fix:tslint": "tslint --fix --project .",
-    "fix:copyright": "node build/main/cli.js --fix --copyrightHolder \"Marco Stahl\" --include src --exclude \"src/cli.ts\"",
+    "fix:copyright": "node build/main/cli.js --fix --copyrightHolder \"Marco Stahl\" --include src",
     "test": "run-s build test:*",
     "test:lint": "tslint --project . && prettier \"src/**/*.ts\" --list-different",
     "test:unit": "nyc --silent ava",
-    "test:copyright": "node build/main/cli.js --copyrightHolder \"Marco Stahl\" --include src --exclude \"src/cli.ts\"",
+    "test:copyright": "node build/main/cli.js --copyrightHolder \"Marco Stahl\" --include src",
     "watch": "run-s clean build:main && run-p \"build:main -- -w\" \"test:unit -- --watch\"",
     "cov": "run-s build test:unit cov:html && opn coverage/index.html",
     "cov:html": "nyc report --reporter=html",
